--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Data Exploration\n",
     "\n",
-    "In this notebook describe your data exploration steps."
+    "In this notebook describe this step by step process of data collection and formulation to identify-how much of the increased rate of accidents is related to the increase in bicycle traffic."
    ]
   },
   {
